...
            )
        ]

        vm.subscriptionProducts = [
            StoreProduct(
                id: StoreProductConfiguration.monthlySubscription,
                name: "Monthly Premium",
                description: "Access all features",
                price: "¥12.00",
                priceLocale: Locale(identifier: "zh_CN"),
                type: .subscription,
                points: nil,
                subscriptionPeriod: SubscriptionPeriod(value: 1, unit: .month),
...
